[package]
name = "kifuwarabe_tic_tac_toe"
version = "0.2.1"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"
description = """
A small example before developing computer chess and computer shogi.  
Come see the repository.  
"""
readme = "README.md"
repository = "https://github.com/muzudho/kifuwarabe-tic-tac-toe"
license = "MIT"
keywords = ["tic-tac-toe"]
categories = ["game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = "1.4.0"
chrono = "0.4"
regex = "1"
casual_logger = "0.5.0"
